Dynamic Content Scaling is needlessly enabled for some canvas elements https://bugs.webkit.org/show_bug.cgi?id=287372 rdar://144489486
Reviewed by Wenson Hsieh.

Dynamic Content Scaling doesn't work for canvas right now, because we don't
record and replay canvas commands. Because of this, we disable it for layers
that back canvases, to avoid pointless overhead.

However, to identify canvas layers, we were using isBitmapOnly(), which does not
include e.g. canvases that have backgrounds.

Instead, centralize the Dynamic Content Scaling policy in its own method, which
applies to all canvases regardless of decorations, *and* bitmap-only layers.

Also, the way that Dynamic Content Scaling enablement was plumbed to GPUP-hosted
layer backing was very duplicative (instead of conferring with includeDisplayList,
we would check isBitmapOnly() again!). Repair this so we can have the logic
in only one place. This also obviates the need for RenderingPurpose::BitmapOnlyLayerBacking,
which was a bit of a conflation of two separate dimensions.

* Source/WebCore/platform/graphics/RenderingMode.cpp:
(WebCore::operator<<):
* Source/WebCore/platform/graphics/RenderingMode.h:
* Source/WebCore/platform/graphics/cocoa/IOSurface.h:
* Source/WebCore/platform/graphics/cocoa/IOSurface.mm:
(WebCore::surfaceNameToNSString):
(WebCore::IOSurface::nameForRenderingPurpose):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::shouldUseRemoteRenderingFor):
Get rid of BitmapOnlyLayerBacking.

* Source/WebCore/platform/graphics/GraphicsLayerClient.h:
(WebCore::GraphicsLayerClient::layerAllowsDynamicContentScaling const):
(WebCore::GraphicsLayerClient::layerContainsBitmapOnly const): Deleted.
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h:
* Source/WebCore/platform/graphics/ca/PlatformCALayerClient.h:
(WebCore::PlatformCALayerClient::platformCALayerAllowsDynamicContentScaling const):
(WebCore::PlatformCALayerClient::platf

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -1813,7 +1813,6 @@ enum class WebCore::RenderingPurpose : uint8_t {
     Canvas,
     DOM,
     LayerBacking,
-    BitmapOnlyLayerBacking,
     Snapshot,
     ShareableSnapshot,
     ShareableLocalSnapshot,
@@ -8191,6 +8190,8 @@ header: <WebCore/ShareableResource.h>
     Ref<WebCore::SharedBuffer> displayList();
     Vector<MachSendRight> takeSurfaces();
 }
+
+enum class WebCore::IncludeDynamicContentScalingDisplayList : bool;
 #endif
 
 enum class WebCore::PlatformCursorType : uint8_t {
