--- a/Source/WebKit/Shared/graphics/RemoteImageBufferSetConfiguration.serialization.in
+++ b/Source/WebKit/Shared/graphics/RemoteImageBufferSetConfiguration.serialization.in
@@ -1,4 +1,4 @@
-# Copyright (C) 2023 Apple Inc. All rights reserved.
+# Copyright (C) 2025 Apple Inc. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -22,18 +22,19 @@
 
 #if ENABLE(GPU_PROCESS)
 
-[
-    ExceptionForEnabledBy,
-    DispatchedFrom=WebContent,
-    DispatchedTo=GPU
-]
-messages -> RemoteImageBufferSet Stream {
-    UpdateConfiguration(struct WebKit::RemoteImageBufferSetConfiguration configuration)
-    EndPrepareForDisplay(WebKit::RenderingUpdateID renderingUpdateID)
+header: "RemoteImageBufferSetConfiguration.h"
+
+[AdditionalEncoder=StreamConnectionEncoder] struct WebKit::RemoteImageBufferSetConfiguration {
+    WebCore::FloatSize logicalSize;
+    float resolutionScale;
+    WebCore::DestinationColorSpace colorSpace;
+    WebCore::ImageBufferPixelFormat pixelFormat;
+    WebCore::RenderingMode renderingMode;
+    WebCore::RenderingPurpose renderingPurpose;
 
 #if ENABLE(RE_DYNAMIC_CONTENT_SCALING)
-    DynamicContentScalingDisplayList() -> (std::optional<WebCore::DynamicContentScalingDisplayList> displayList) Synchronous NotStreamEncodableReply
+    WebCore::IncludeDynamicContentScalingDisplayList includeDisplayList;
 #endif
-}
+};
 
 #endif
