[Script Telemetry] Enable script telemetry by default https://bugs.webkit.org/show_bug.cgi?id=287406 rdar://138577505
Reviewed by Aditya Keerthi.

Enable the feature flag by default, on all configurations and platforms where
`ENABLE(SCRIPT_TELEMETRY)` is turned on.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/290185@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -6462,7 +6462,7 @@ ScriptTelemetryEnabled:
   webcoreBinding: none
   defaultValue:
     WebKit:
-      default: false
+      default: true
 
 ScriptTelemetryLoggingEnabled:
   type: bool
