[GPUP][macOS] Add access to camera related IOKit client in sandbox https://bugs.webkit.org/show_bug.cgi?id=287448 rdar://144396984
Reviewed by Sihui Liu.

* Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::addCameraSandboxExtensions):

Canonical link: https://commits.webkit.org/290237@main

--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -716,7 +716,9 @@
 (allow iokit-open-service
     (require-all
         (extension "com.apple.webkit.extension.iokit")
-        (iokit-user-client-class "H11ANEIn")))
+        (iokit-user-client-class
+            "H11ANEIn"
+            "H1xANELoadBalancer")))
 #endif // HAVE(APPLE_CAMERA_USER_CLIENT)
 
 (deny IOKIT_OPEN_USER_CLIENT
