--- a/Source/WebKit/WebProcess/Inspector/WebInspector.messages.in
+++ b/Source/WebKit/WebProcess/Inspector/WebInspector.messages.in
@@ -25,7 +25,7 @@
     DispatchedTo=WebContent
 ]
 messages -> WebInspector {
-    Show()
+    Show() -> () Async
     Close()
 
     SetAttached(bool attached)
