[UnifiedPDF] [iOS] Double-tap to zoom has no effect https://bugs.webkit.org/show_bug.cgi?id=287515 rdar://120425634
Reviewed by Tim Horton and Wenson Hsieh.

This patch teaches ViewGestureController to compute zoom information for
the main frame plugin element. We achieve this by computing the root
view bounding rect for the plugin at a tap location. In the spirit of
"smart" magnification, this bounding rect corresponds to the column
frame for text under the tap location in the document. However, we
return an empty rect when there is no available text, which makes us
fall back to our backup double-tap-to-zoom heuristics for web content.

Manually tested. Could not add an automated test because we don't really
have infrastructure in place to trigger UIKit double tap gestures in
TestWebKitAPI.

* Source/WebKit/Platform/spi/Cocoa/PDFKitSPI.h:

Declare the -[PDFPage columnFrameAtPoint:] SPI for open source builds.

* Source/WebKit/UIProcess/PageClient.h:
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/UIProcess/ios/PageClientImplIOS.h:
* Source/WebKit/UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::handleSmartMagnificationInformationForPotentialTap):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _handleSmartMagnificationInformationForPotentialTap:renderRect:fitEntireRect:viewportMinimumScale:viewportMaximumScale:nodeIsRootLevel:nodeIsPluginElement:]):
(-[WKContentView _handleSmartMagnificationInformationForPotentialTap:renderRect:fitEntireRect:viewportMinimumScale:viewportMaximumScale:nodeIsRootLevel:]): Deleted.

Add a new argument `nodeIsPluginElement`, which we can consult to blast
through the "faster clicks over double tap" preference if the tapped
node is a plugin element.

* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::handleSmartMagnificationInformationForPotentialTap):
* Sourc

--- a/Source/WebKit/UIProcess/WebPageProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebPageProxy.messages.in
@@ -191,7 +191,7 @@ messages -> WebPageProxy {
     DidCompleteSyntheticClick()
     DidHandleTapAsHover()
     DisableDoubleTapGesturesDuringTapIfNecessary(WebKit::TapIdentifier requestID)
-    HandleSmartMagnificationInformationForPotentialTap(WebKit::TapIdentifier requestID, WebCore::FloatRect renderRect, bool fitEntireRect, double viewportMinimumScale, double viewportMaximumScale, bool nodeIsRootLevel)
+    HandleSmartMagnificationInformationForPotentialTap(WebKit::TapIdentifier requestID, WebCore::FloatRect renderRect, bool fitEntireRect, double viewportMinimumScale, double viewportMaximumScale, bool nodeIsRootLevel, bool nodeIsPluginElement)
     IsPotentialTapInProgress() -> (bool result)
 #endif
 #if ENABLE(DATA_DETECTION)
