Add support for CoreIPCNSURLCredentialType::ClientCertificate https://bugs.webkit.org/show_bug.cgi?id=287528 rdar://144634274
Reviewed by Sihui Liu.

* Source/WebKit/Shared/Cocoa/CoreIPCNSURLCredential.h:
* Source/WebKit/Shared/Cocoa/CoreIPCNSURLCredential.mm:
(WebKit::CoreIPCNSURLCredential::CoreIPCNSURLCredential):
(WebKit::CoreIPCNSURLCredential::toID const):
* Source/WebKit/Shared/Cocoa/CoreIPCNSURLCredential.serialization.in:

Canonical link: https://commits.webkit.org/290313@main

--- a/Source/WebKit/Shared/Cocoa/CoreIPCNSURLCredential.serialization.in
+++ b/Source/WebKit/Shared/Cocoa/CoreIPCNSURLCredential.serialization.in
@@ -36,6 +36,7 @@ header: "CoreIPCNSURLCredential.h"
     Password,
     ServerTrust,
     KerberosTicket,
+    ClientCertificate,
     XMobileMeAuthToken,
     OAuth2
 };
