Use sendWithAsyncReply for WebFullScreenManagerProxy::BeganExitFullScreen rdar://144813733 https://bugs.webkit.org/show_bug.cgi?id=287664
Reviewed by Eric Carlson.

WebFullScreenManager::DidExitFullScreen should only be called as a reply to BeganExitFullScreen,
so I replaced it with a completion handler.  There are a few cases where we used to proactively
send this reply to a question that had not yet been asked by the web content process to the UI
process, but now we wait for the question to be asked before sending the reply.  The correctness
of such cases is tested by unit tests like WKWebViewCloseAllMediaPresentations.ElementFullscreen.

This is a step towards getting fullscreen working properly with site isolation.

I also may have fixed the PlayStation fullscreen code by changing the default from failing to enter
to succeeding to enter immediately.  If they want an async task to happen during the entering
time, they can add a listener object.

* Source/WebKit/UIProcess/API/C/WKPage.cpp:
(RunJavaScriptConfirmResultListener::create):
(RunJavaScriptConfirmResultListener::~RunJavaScriptConfirmResultListener):
(RunJavaScriptConfirmResultListener::call):
(RunJavaScriptConfirmResultListener::RunJavaScriptConfirmResultListener):
(WKPageSetFullScreenClientForTesting):
(WKPageDidExitFullScreen): Deleted.
(WebKit::RunJavaScriptConfirmResultListener::create): Deleted.
(WebKit::RunJavaScriptConfirmResultListener::~RunJavaScriptConfirmResultListener): Deleted.
(WebKit::RunJavaScriptConfirmResultListener::call): Deleted.
(WebKit::RunJavaScriptConfirmResultListener::RunJavaScriptConfirmResultListener): Deleted.
* Source/WebKit/UIProcess/API/C/WKPage.h:
* Source/WebKit/UIProcess/API/C/WKPageFullScreenClient.h:
* Source/WebKit/UIProcess/API/C/playstation/WKView.cpp:
(WKViewDidExitFullScreen):
(WKViewSetViewClient):
* Source/WebKit/UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::beganExitFullScreen):
* Source/WebKit/UIProcess/API/gtk/PageClientImpl.h:
* Source/WebK

--- a/Source/WebKit/UIProcess/WebFullScreenManagerProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebFullScreenManagerProxy.messages.in
@@ -34,7 +34,7 @@ messages -> WebFullScreenManagerProxy {
 #endif
     ExitFullScreen()
     BeganEnterFullScreen(WebCore::IntRect initialRect, WebCore::IntRect finalRect)
-    BeganExitFullScreen(WebCore::IntRect initialRect, WebCore::IntRect finalRect)
+    BeganExitFullScreen(WebCore::IntRect initialRect, WebCore::IntRect finalRect) -> ()
     Close()
 }
 #endif
