[macOS] Add infrastructure for drawing vector-based form controls https://bugs.webkit.org/show_bug.cgi?id=287853 rdar://145032318
Reviewed by Abrar Rahman Protyasha and Wenson Hsieh.

Introduce an experiment to draw vector-based controls on macOS, rather than
cell-based drawing via AppKit.

This is desirable for two reasons:
- Cells can only be rendered at fixed sizes, resulting in web compat issues
- Cell drawing can be expensive

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.h:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::adjustCheckboxStyle const):
(WebCore::RenderThemeCocoa::paintCheckbox):
(WebCore::RenderThemeCocoa::adjustRadioStyle const):
(WebCore::RenderThemeCocoa::paintRadio):
(WebCore::RenderThemeCocoa::adjustButtonStyle const):
(WebCore::RenderThemeCocoa::paintButton):
(WebCore::RenderThemeCocoa::adjustColorWellStyle const):
(WebCore::RenderThemeCocoa::paintColorWell):
(WebCore::RenderThemeCocoa::paintColorWellDecorations):
(WebCore::RenderThemeCocoa::adjustInnerSpinButtonStyle const):
(WebCore::RenderThemeCocoa::adjustTextFieldStyle const):
(WebCore::RenderThemeCocoa::paintTextField):
(WebCore::RenderThemeCocoa::paintTextFieldDecorations):
(WebCore::RenderThemeCocoa::adjustTextAreaStyle const):
(WebCore::RenderThemeCocoa::paintTextArea):
(WebCore::RenderThemeCocoa::paintTextAreaDecorations):
(WebCore::RenderThemeCocoa::adjustMenuListStyle const):
(WebCore::RenderThemeCocoa::paintMenuList):
(WebCore::RenderThemeCocoa::paintMenuListDecorations):
(WebCore::RenderThemeCocoa::adjustMenuListButtonStyle const):
(WebCore::RenderThemeCocoa::paintMenuListButtonDecorations):
(WebCore::RenderThemeCocoa::adjustMeterStyle const):
(WebCore::RenderThemeCocoa::paintMeter):
(WebCore::RenderThemeCocoa::adjustListButtonStyle const):
(WebCore::RenderThemeCocoa::paintListButton):
(WebCore::RenderThemeCocoa::adjustProgressBarStyle const):
(WebCore::RenderThemeCocoa::paintProg

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -8140,6 +8140,20 @@ VP9DecoderEnabled:
     WebKit:
       default: true
 
+VectorBasedControlsOnMacEnabled:
+  type: bool
+  status: internal
+  humanReadableName: "Vector based controls on macOS"
+  humanReadableDescription: "Enable vector based controls on macOS"
+  condition: ENABLE(VECTOR_BASED_CONTROLS_ON_MAC)
+  defaultValue:
+    WebKit:
+      default: false
+    WebKitLegacy:
+      default: false
+    WebCore:
+      default: false
+
 VerifyWindowOpenUserGestureFromUIProcess:
   type: bool
   status: testable
