Implement browser.test.addTest to support web platform testing of extensions https://bugs.webkit.org/show_bug.cgi?id=287566 rdar://144706714
Reviewed by Timothy Hatcher.

This patch adds a new API for running tests that are represented by promises.
If any browser.test assertion within the test method fails, we reject the
promise and notify fail; otherwise, we resolve the promise and notify pass.
It's worth noting that tests are ran in the order in which they're added with
the addTest method.

* Source/WebKit/UIProcess/API/Cocoa/WKWebExtensionControllerDelegatePrivate.h:
Define the delegate methods that are called when the following messages are received...

* Source/WebKit/UIProcess/Extensions/WebExtensionController.h:
* Source/WebKit/UIProcess/Extensions/WebExtensionController.messages.in:
* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionControllerAPITestCocoa.mm:
(WebKit::WebExtensionController::testAdded):
(WebKit::WebExtensionController::testStarted):
...the two new messages are:

the testAdded message, which is sent when browser.test.addTest is called,
and the testStarted message, which is called when the next test is removed
from the queue and has started executing.

* Source/WebKit/WebProcess/Extensions/Interfaces/WebExtensionAPITest.idl:
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPITestCocoa.mm:
(WebKit::WebExtensionAPITest::assertTrue):
(WebKit::WebExtensionAPITest::assertDeepEq):
(WebKit::WebExtensionAPITest::assertEquals):
(WebKit::WebExtensionAPITest::assertEq):
(WebKit::WebExtensionAPITest::addTest):
(WebKit::WebExtensionAPITest::startNextTest):
(WebKit::assertEquals): Deleted.
Implement the logic for browser.test.addTest, which just maintains a queue of
test methods to run and resolves/rejects the promise based on whether or not
any assertions are hit during the execution.

* Source/WebKit/WebProcess/Extensions/API/WebExtensionAPITest.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPITest.mm:
(TestWebKitAPI::TEST(W

--- a/Source/WebKit/UIProcess/Extensions/WebExtensionController.messages.in
+++ b/Source/WebKit/UIProcess/Extensions/WebExtensionController.messages.in
@@ -41,7 +41,9 @@ messages -> WebExtensionController {
     [Validator=inTestingMode] TestEqual(bool result, String expected, String actual, String message, String sourceURL, unsigned lineNumber)
     [Validator=inTestingMode] TestLogMessage(String message, String sourceURL, unsigned lineNumber)
     [Validator=inTestingMode] TestSentMessage(String message, String argument, String sourceURL, unsigned lineNumber)
-    [Validator=inTestingMode] TestFinished(bool result, String message, String sourceURL, unsigned lineNumber)
+    [Validator=inTestingMode] TestAdded(String testName, String sourceURL, unsigned lineNumber)
+    [Validator=inTestingMode] TestStarted(String testName, String sourceURL, unsigned lineNumber)
+    [Validator=inTestingMode] TestFinished(String testName, bool result, String message, String sourceURL, unsigned lineNumber)
 }
 
 #endif // ENABLE(WK_WEB_EXTENSIONS)
