[HDR] Enable HDR image support for layout tests https://bugs.webkit.org/show_bug.cgi?id=287892 rdar://145088080
Reviewed by Simon Fraser.

This was blocked by the misconception that we have to decode the image to know
its headroom. It turns out that ImageIO can return the headroom in the metadata
of the CGImageSource. So no image decoding is needed before drawing the image.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/platform/graphics/BitmapImageDescriptor.cpp:
(WebCore::BitmapImageDescriptor::headroom const):
* Source/WebCore/platform/graphics/ImageDecoder.cpp:
(WebCore::ImageDecoder::fetchFrameMetaDataAtIndex const):
* Source/WebCore/platform/graphics/ImageDecoder.h:
(WebCore::ImageDecoder::frameHeadroomAtIndex const):
* Source/WebCore/platform/graphics/cg/ImageDecoderCG.cpp:
(WebCore::headroomFromProperties):
(WebCore::ImageDecoderCG::fetchFrameMetaDataAtIndex const):

Canonical link: https://commits.webkit.org/290584@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3396,7 +3396,7 @@ GraphicsContextFiltersEnabled:
 
 HDRForImagesEnabled:
   type: bool
-  status: unstable
+  status: testable
   category: media
   webcoreOnChange: setNeedsRelayoutAllFrames
   humanReadableName: "HDR for Images Support"
