[visionOS] Add Netflix quirk to allow staying in fullscreen when transitioning between items in a playlist rdar://134980072 https://bugs.webkit.org/show_bug.cgi?id=287722
Reviewed by Andy Estes.

When Netflix.com moves to the next item in a playlist, it pulls the current video out of the DOM
and replaces it with another video containing the next video content. Removing the video from
the DOM has the effect of closing any fullscreen presentation, including the "Environment Docking"
fullscreen mode on visionOS.

Add a quirk that allows the fullscreen presentation to stay open when its backing video is removed
from the DOM, and add a "swap" behavior that migrates all the fullscreen modes and state between
the two video elements at every level in the project. This includes moving the VideoReceiverEndpoint
and its VideoTarget, however that transition is tricky because only one VideoTarget ever can be
created from a single VideoReceiverEndpoint. Add another layer of caching of endpoints and targets
inside RemoteMediaPlayerManagerProxyCocoa by introducing the concept of VideoReceiverEndpointIdentifier.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::pauseAfterDetachedTask):
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsNowPlayingFullscreenSwapQuirk const):
(WebCore::handleNetflixQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebCore/platform/VideoReceiverEndpoint.h:
* Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.h:
* Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.mm:
(WebCore::PlaybackSessionModelMediaElement::updateAll):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::isInFullscreenOrPictureInPictureChanged):
* Source/WebCore/platform/ios/PlaybackSessionInterfaceIOS.h:
* Source/WebCore/platform/ios/VideoPresentationInterfaceIOS.h:
(Web

--- a/Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.messages.in
+++ b/Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.messages.in
@@ -52,6 +52,8 @@ messages -> PlaybackSessionManagerProxy {
     SetUpPlaybackControlsManagerWithID(WebKit::PlaybackSessionContextIdentifier contextId, bool isVideo)
     ClearPlaybackControlsManager()
 
+    SwapFullscreenModes(WebKit::PlaybackSessionContextIdentifier firstContextId, WebKit::PlaybackSessionContextIdentifier secondContextId)
+
     HandleControlledElementIDResponse(WebKit::PlaybackSessionContextIdentifier contextId, String id)
 
 #if !RELEASE_LOG_DISABLED
